stateDiagram-v2
    [*] --> DRAFT: Create New
    [*] --> PENDING: API Trigger

    DRAFT --> PENDING: Submit Request
    DRAFT --> CANCELLED: Manual Void

    PENDING --> SIGNING: Start Digital Signature
    PENDING --> CANCELLED: Cancel Request

    SIGNING --> SENT_TO_PROVIDER: Forward to Provider API
    SIGNING --> CANCELLED: Cancel Request

    SENT_TO_PROVIDER --> SUCCESS: Provider Success (200 OK)
    SENT_TO_PROVIDER --> FAILED: Provider Error / Timeout
    SENT_TO_PROVIDER --> CANCELLED: Cancel Request

    SUCCESS --> REPLACED: Issue Replacement Invoice
    SUCCESS --> CANCELLED: Void Successful Invoice

    FAILED --> PENDING: Re-submit (Fix Data)
    FAILED --> CANCELLED: Permanent Discard

    SUCCESS --> [*]
    CANCELLED --> [*]
    REPLACED --> [*]
    
    note right of SUCCESS: Terminal State
    note right of CANCELLED: Terminal State
    note right of REPLACED: Terminal State
    note right of FAILED: Terminal State (Manual Action Required)